igt@i915_pm_rpm@gem-execbuf@lmem0 - fail - Failed assertion: px == 0
Starting subtest: gem-execbuf
Starting dynamic subtest: lmem0
(i915_pm_rpm:1210) CRITICAL: Test assertion failure function gem_execbuf_subtest, file ../tests/i915/i915_pm_rpm.c:1376:
(i915_pm_rpm:1210) CRITICAL: Failed assertion: px == 0
Dynamic subtest lmem0 failed.
- Show closed items
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Ravi V added feature: power/runtime PM platform: DG1 labels
added feature: power/runtime PM platform: DG1 labels
- Reporter
The CI Bug Log issue associated to this bug has been updated by .
New filters associated
- DG1 : igt@i915_pm_rpm@gem-execbuf@lmem0 - fail - Failed assertion: px == 0
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_7400/shard-dg1-16/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_7404/shard-dg1-17/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_7405/shard-dg1-16/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGT_6544/shard-dg1-18/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_7411/shard-dg1-19/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGT_6546/shard-dg1-12/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_11818/shard-dg1-18/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_11819/shard-dg1-13/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGT_6547/shard-dg1-18/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGT_6548/shard-dg1-15/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_7401/shard-dg1-12/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGT_6549/shard-dg1-17/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_7428/shard-dg1-12/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_7429/shard-dg1-13/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_7430/shard-dg1-16/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_104309v7/shard-dg1-19/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_105005v5/shard-dg1-12/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_11821/shard-dg1-13/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_11822/shard-dg1-15/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_7433/shard-dg1-18/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_105444v3/shard-dg1-12/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_105734v2/shard-dg1-12/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_105760v1/shard-dg1-18/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_11823/shard-dg1-15/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGT_6551/shard-dg1-15/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_11810/shard-dg1-19/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_11811/shard-dg1-18/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_105773v1/shard-dg1-17/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_7425/shard-dg1-18/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_7440/shard-dg1-18/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_11826/shard-dg1-16/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_11813/shard-dg1-12/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_7399/shard-dg1-17/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- DG1 : igt@i915_pm_rpm@gem-execbuf@lmem0 - fail - Failed assertion: px == 0
- Reporter
A CI Bug Log filter associated to this bug has been updated by :
Description: DG2 DG1 : igt@i915_pm_rpm@gem-execbuf@lmem0 - fail - Failed assertion: px == 0
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["bat-dg1-6", "bat-dg1-5", "shard-dg1-15", "shard-dg1-13", "shard-dg1-12", "shard-dg1-16", "shard-dg1-14", "shard-dg1-17", "shard-dg1-19", "shard-dg1-18", "shard-dg1", "bat-dg2-8", "bat-dg2-9", "re-dg2-11", "re-dg2-12", "bat-dg2-10", "bat-dg2-11", "re-dg2-13", "re-dg2-14", "fi-dg1-1"] OR machine_tag IS IN ["DG1", "DG2"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@i915_pm_rpm@gem-execbuf@lmem0", "igt@i915_pm_rpm@gem-execbuf"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: px == 0'
New failures caught by the filter:
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12074/re-dg2-13/igt@i915_pm_rpm@gem-execbuf.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12074/re-dg2-13/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12114/re-dg2-13/igt@i915_pm_rpm@gem-execbuf.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12114/re-dg2-13/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12083/re-dg2-13/igt@i915_pm_rpm@gem-execbuf.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12083/re-dg2-13/igt@i915_pm_rpm@gem-execbuf@lmem0.html
- Ravi V added platform: DG2 label
added platform: DG2 label
- Anshuman Gupta mentioned in commit nouveau@ad74457a
mentioned in commit nouveau@ad74457a
- Reporter
On CI, last seen this issue on Sept. 14, 2022, 12:15 a.m. Closing this issue as can not reproduce.
- LAKSHMINARAYANA VUDUM closed
closed
- Reporter
The CI Bug Log issue associated to this bug has been archived.
New failures matching the above filters will not be associated to this bug anymore.